--- a/week5.html
+++ b/week5.html
@@ -81,6 +81,189 @@
             <p>Placeholder text outlining the plan for the next week.</p>
           </article>
         </section>
+
+        <section class="annotation-gallery reveal">
+          <header class="section-heading">
+            <p class="eyebrow">Annotation Progress</p>
+            <h2>Before / On / Mask triplets</h2>
+            <p class="lead">
+              Ten selected tiles from the E425 campaign showing the raw before
+              scene, the on-site capture, and the derived change mask produced
+              with the annotation tool.
+            </p>
+          </header>
+          <div class="annotation-grid">
+            <article class="annotation-card" aria-label="Set 01 triplet">
+              <div class="triplet-row">
+                <figure>
+                  <img src="assets/BEFORE_E425_01.png" alt="Before Set 01 preview">
+                  <figcaption>Before</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/ON_E425_01.png" alt="On Set 01 preview">
+                  <figcaption>On</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/MASK_1.png" alt="Mask Set 01 preview">
+                  <figcaption>Mask</figcaption>
+                </figure>
+              </div>
+            </article>
+
+            <article class="annotation-card" aria-label="Set 02 triplet">
+              <div class="triplet-row">
+                <figure>
+                  <img src="assets/BEFORE_E425_02.png" alt="Before Set 02 preview">
+                  <figcaption>Before</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/ON_E425_02.png" alt="On Set 02 preview">
+                  <figcaption>On</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/MASK_2.png" alt="Mask Set 02 preview">
+                  <figcaption>Mask</figcaption>
+                </figure>
+              </div>
+            </article>
+
+            <article class="annotation-card" aria-label="Set 03 triplet">
+              <div class="triplet-row">
+                <figure>
+                  <img src="assets/BEFORE_E425_03.png" alt="Before Set 03 preview">
+                  <figcaption>Before</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/ON_E425_03.png" alt="On Set 03 preview">
+                  <figcaption>On</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/MASK_3.png" alt="Mask Set 03 preview">
+                  <figcaption>Mask</figcaption>
+                </figure>
+              </div>
+            </article>
+
+            <article class="annotation-card" aria-label="Set 04 triplet">
+              <div class="triplet-row">
+                <figure>
+                  <img src="assets/BEFORE_E425_04.png" alt="Before Set 04 preview">
+                  <figcaption>Before</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/ON_E425_04.png" alt="On Set 04 preview">
+                  <figcaption>On</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/MASK_4.png" alt="Mask Set 04 preview">
+                  <figcaption>Mask</figcaption>
+                </figure>
+              </div>
+            </article>
+
+            <article class="annotation-card" aria-label="Set 05 triplet">
+              <div class="triplet-row">
+                <figure>
+                  <img src="assets/BEFORE_E425_05.png" alt="Before Set 05 preview">
+                  <figcaption>Before</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/ON_E425_05.png" alt="On Set 05 preview">
+                  <figcaption>On</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/MASK_5.png" alt="Mask Set 05 preview">
+                  <figcaption>Mask</figcaption>
+                </figure>
+              </div>
+            </article>
+
+            <article class="annotation-card" aria-label="Set 06 triplet">
+              <div class="triplet-row">
+                <figure>
+                  <img src="assets/BEFORE_E425_06.png" alt="Before Set 06 preview">
+                  <figcaption>Before</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/ON_E425_06.png" alt="On Set 06 preview">
+                  <figcaption>On</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/MASK_6.png" alt="Mask Set 06 preview">
+                  <figcaption>Mask</figcaption>
+                </figure>
+              </div>
+            </article>
+
+            <article class="annotation-card" aria-label="Set 07 triplet">
+              <div class="triplet-row">
+                <figure>
+                  <img src="assets/BEFORE_E425_07.png" alt="Before Set 07 preview">
+                  <figcaption>Before</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/ON_E425_07.png" alt="On Set 07 preview">
+                  <figcaption>On</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/MASK_7.png" alt="Mask Set 07 preview">
+                  <figcaption>Mask</figcaption>
+                </figure>
+              </div>
+            </article>
+
+            <article class="annotation-card" aria-label="Set 08 triplet">
+              <div class="triplet-row">
+                <figure>
+                  <img src="assets/BEFORE_E425_08.png" alt="Before Set 08 preview">
+                  <figcaption>Before</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/ON_E425_08.png" alt="On Set 08 preview">
+                  <figcaption>On</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/MASK_8.png" alt="Mask Set 08 preview">
+                  <figcaption>Mask</figcaption>
+                </figure>
+              </div>
+            </article>
+
+            <article class="annotation-card" aria-label="Set 09 triplet">
+              <div class="triplet-row">
+                <figure>
+                  <img src="assets/BEFORE_E425_09.png" alt="Before Set 09 preview">
+                  <figcaption>Before</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/ON_E425_09.png" alt="On Set 09 preview">
+                  <figcaption>On</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/MASK_9.png" alt="Mask Set 09 preview">
+                  <figcaption>Mask</figcaption>
+                </figure>
+              </div>
+            </article>
+
+            <article class="annotation-card" aria-label="Set 10 triplet">
+              <div class="triplet-row">
+                <figure>
+                  <img src="assets/BEFORE_E425_10.png" alt="Before Set 10 preview">
+                  <figcaption>Before</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/ON_E425_10.png" alt="On Set 10 preview">
+                  <figcaption>On</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/MASK_10.png" alt="Mask Set 10 preview">
+                  <figcaption>Mask</figcaption>
+                </figure>
+              </div>
+            </article>
+          </div>
+        </section>
       </div>
     </main>
 
