--- a/week5.html
+++ b/week5.html
@@ -149,7 +149,7 @@
 
     <footer>
       <p>Academic Research Portfolio | Week 5</p>
-      <span class="signature">Nichula</span>
+      <span class="signature">Nichula Wasalathilaka</span>
     </footer>
 
     <script src="js/script.js"></script>
